--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  background-color: rgb(15 23 42);}
+/* body {
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(8,8,112,1) 14%, rgba(0,212,255,1) 71%, rgba(9,9,121,1) 100%);} */
