--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -3,13 +3,16 @@
 .image {
   display: flex;
   justify-content: flex-start;
-  height: 100%;
-  width: 10%;
+  height: auto;
+  width: 100px;
+  border-radius: 50%;
+  transition: 0.7s;
+
+  filter: invert(1);
 }
 
 .image:hover {
-  background-color: $hover-light-orange;
-  color: $light-grey;
+  filter: invert(0);
 }
 
 .nav {
@@ -17,11 +20,13 @@
   flex-direction: row;
   background-color: $basketball-orange;
   background-size: auto;
+  align-content: center;
 }
 
 .nav-buttons {
   display: flex;
-  width: 100%;
+  width: 85%;
+  align-items: center;
 }
 
 .nav-buttons a {
@@ -29,9 +34,8 @@
   color: $white;
   text-decoration: none;
   font-family: $font-family;
-  font-size: 200%;
+  font-size: 120%;
 
-  margin: auto;
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 60px;
@@ -41,25 +45,49 @@
   height: auto;
   width: 140px;
 
-  border-style: solid;
-  border-radius: 20px;
+  border-right: solid;
+  border-left: solid;
+  border-width: 3px;
+  border-color: $white !important;
+
+  transition: 0.7s;
 }
+
 .nav-buttons a:hover {
-  background-color: $orange;
+  background-color: $light-orange;
+  scale: 1.2;
 }
 
 .nav-buttons div {
   font-family: $font-family;
   height: auto;
   width: auto;
-  color: $orange;
-  font-size: 250%;
+  color: $white;
+  font-size: 300%;
   font-weight: bold;
+  text-align: center;
 
-  margin: auto;
+  margin-right: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+
   padding-left: 20px;
   padding-right: 20px;
-  padding-top: 60px;
-  padding-bottom: 1em;
-  padding-top: 1em;
+}
+
+#last-nav-button {
+  margin-right: 1em;
+  border-right-width: 6px;
+}
+
+#last-nav-button:hover {
+  border-right-width: 3px;
+}
+
+#first-nav-button {
+  border-left-width: 6px;
+}
+
+#first-nav-button:hover {
+  border-left-width: 3px;
 }
